--- a/Фінальний проєкт/NotificationsDropdown.html
+++ b/Фінальний проєкт/NotificationsDropdown.html
@@ -12,11 +12,11 @@
     <div class="flex justify-center">
         <div class="relative my-8">
             <div>
-                <button class="relative z-10 block rounded-md bg-purple-200 p-2 cursor-pointer hover:bg-purple-500" >
+                <button class="absolute right-0 z-10 block rounded-md bg-purple-200 p-2 cursor-pointer hover:bg-purple-500" >
                     <span class="material-icons md-light"> notifications_active </span>
                 </button>
             </div>
-            <div class="absolute right-0 mt-2 bg-white rounded-lg shadow-2xl z-20 overflow-hidden" style="width:25em;">
+            <div class="w-auto min-w-fit max-w-sm right-0 mt-12 pt-2 bg-white rounded-lg shadow-2xl z-20">
                 <div class="mt-3">
                     <div class="flow-root px-2 py-1">
                         <div class="float-left">
